test/gpu/native/halting/gpuhalt.good
I shall not halt
I shall halt
gpuhalt.chpl:9: error: halt reached in GPU kernel
